--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -140,11 +140,11 @@
                         <div class="col base-col">
                             {% if current_user.is_authenticated %}
 
-                            <img class="up-arrow-adjust" src="/static/images/up_arrow.png">
+                            <img class="down-arrow-adjust" src="/static/images/down_arrow.png">
 
                             {%  else %}
 
-                            <img class="up-arrow" src="/static/images/up_arrow.png">
+                            <img class="down-arrow" src="/static/images/up_arrow.png">
 
                             {% endif %}
 
