flip up arrow down

--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -144,7 +144,7 @@
 
                             {%  else %}
 
-                            <img class="down-arrow" src="/static/images/up_arrow.png">
+                            <img class="down-arrow" src="/static/images/down_arrow.png">
 
                             {% endif %}
 
