--- a/app/templates/contact.html
+++ b/app/templates/contact.html
@@ -2,7 +2,7 @@
 {% block content %}
 
             <div class="row">
-                <div id="img-about" class="col pl-0 position-relative text-white text-center align-text-top">
+                <div id="img-about" class="col pl-0 position-relative text-white text-center align-text-top"><div id="about-overlay"></div>
                     <div class="p-4 position-fixed text-uppercase banner-about">
                         Contact
                         <hr class="banner_hr_small position-fixed border mt-2">
