--- a/app/static/css/style.css
+++ b/app/static/css/style.css
@@ -836,10 +836,28 @@ cursor: pointer;
     border-color: #0d0f11 !important;
 }
 
-  .base-2 {
+.base-2 {
 
-        margin-right: 1.5rem;
+    margin-right: 1.5rem;
+}
+
+@media screen and (max-width: 500px) {
+
+    #img-home {
+
+        margin-top: 0px;
+        height: 110vh;
+        transform: scale(2);
     }
+
+    #img-about {
+
+        margin-top: -16%;
+        height: 116vh;
+        transform: scale(2);
+    }
+
+}
 
 @media screen and (max-width: 576px) {
 
@@ -897,18 +915,6 @@ cursor: pointer;
     .base-col {
 
         top: 0vh;
-    }
-
-    #img-home {
-        margin-top: 0px;
-        height: 110vh;
-        transform: scaleY(1);
-    }
-
-    #img-about {
-        margin-top: -16%;
-        height: 116vh;
-        transform: scaleY(1);
     }
 
     .base-2 {
