img-about bg-size contain scale normal viewport < 576

--- a/app/static/css/style.css
+++ b/app/static/css/style.css
@@ -854,7 +854,7 @@ cursor: pointer;
 
         margin-top: -16%;
         height: 116vh;
-        transform: scale(2);
+        background-size: contain;
     }
 
 }
