--- a/app/templates/members.html
+++ b/app/templates/members.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
 {% block content %}
 
-            <div class="row">
+            <div class="row about-row">
                 <div id="img-about" class="col pl-0 position-relative text-white text-center align-text-top"><div id="about-overlay"></div>
                     <div class="p-4 position-fixed text-uppercase banner-about">
                         Members
