--- a/app/static/css/style.css
+++ b/app/static/css/style.css
@@ -861,14 +861,20 @@ cursor: pointer;
 
         margin-top: 0px;
         height: 110vh;
-        background-size: auto 5000px;
+        background-size: 110vh;
+        -moz-background-size: 110vh;
+        -webkit-background-size: 110vh;
+        -o-background-size: 110vh;
     }
 
     #img-about {
 
         margin-top: -16%;
         height: 50vh;
-        background-size: 50vw;
+        background-size: 120vw;
+        -moz-background-size: 120vw;
+        -webkit-background-size: 120vw;
+        -o-background-size: 120vw;
     }
 
 }
