--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -25,8 +25,7 @@
                                 {{tagline}}
                             </div>
                             {% endif %}
-                            <br>
-                            <button id="enter" onclick="window.location.href='/{{group_id}}/about'" class="btn {{ 'btn-' + theme_color }} mt-5 mr-3 mr-sm-2 px-4 py-3">
+                            <button id="enter" onclick="window.location.href='/{{group_id}}/about'" class="btn {{ 'btn-' + theme_color }} mr-3 mr-sm-2 px-4 py-3">
                                 Enter
                             </button>
 
