--- a/app/templates/about.html
+++ b/app/templates/about.html
@@ -34,8 +34,8 @@
                     <div class="row">
                         <div class="col section-board text-center">
                             <ul id="board" class="px-5 px-5">
-                                <li class="p-4">
-                                    <div id="1" class="board-member d-inline-block text-center p-5 mr-3">
+                                <li class="pr-5">
+                                    <div id="1" class="board-member d-inline-block text-center p-5">
                                         Jane Doe
                                         <br>
                                         <span class="board-member-roll">
@@ -53,8 +53,8 @@
                                         <img class="remove-user d-inline ml-3" src="/static/images/trash.png">
                                     </div> 
                                 </li>
-                                <li class="p-4">
-                                    <div id="2" class="board-member d-inline-block text-center p-5 mr-3">
+                                <li class="pr-5">
+                                    <div id="2" class="board-member d-inline-block text-center p-5">
                                         Rebecca Good
                                         <br>
                                         <span class="board-member-roll">
@@ -70,8 +70,8 @@
                                         </button>
                                     </div> 
                                 </li>
-                                <li class="p-4">
-                                    <div id="2" class="board-member d-inline-block text-center p-5 mr-3">
+                                <li class="pr-5">
+                                    <div id="2" class="board-member d-inline-block text-center p-5">
                                         John Michael
                                         <br>
                                         <span class="board-member-roll">
@@ -87,8 +87,8 @@
                                         </button>
                                     </div> 
                                 </li>
-                                <li class="p-4">
-                                    <div id="2" class="board-member d-inline-block text-center p-5 mr-3">
+                                <li class="pr-5">
+                                    <div id="2" class="board-member d-inline-block text-center p-5">
                                         Shana Anthony
                                         <br>
                                         <span class="board-member-roll">
