mobile responsive banner font Arial

--- a/app/static/css/style.css
+++ b/app/static/css/style.css
@@ -525,7 +525,7 @@ cursor: pointer;
     top: 45vh;
     left: 50%;
     margin-left: -340px;
-    font-family: Geneva;
+    font-family: Arial;
     transform: scaleY(1.1);
     width: 700px;
 }
@@ -539,7 +539,7 @@ cursor: pointer;
     top: 80vh;
     left: 50%;
     margin-left: -340px;
-    font-family: Geneva;
+    font-family: Arial;
     transform: scaleY(1.1);
     width: 700px;
     line-height: 1.3;
