--- a/app/static/css/style.css
+++ b/app/static/css/style.css
@@ -536,14 +536,14 @@ cursor: pointer;
 
 .banner-about {
 
-    top: 80vh;
-    left: 50%;
+    top: 70vh;
+    left: 48%;
     margin-left: -340px;
     font-family: Arial;
     transform: scaleY(1.1);
     width: 700px;
     line-height: 1.3;
-    font-weight: 700;
+    font-weight: 500;
 }
 
 .banner_hr {
@@ -885,6 +885,12 @@ cursor: pointer;
     .banner-title {
 
         font-size: 26pt;
+    }
+
+    .banner_hr {
+        
+        left: 55%;
+        width: 130px;
     }
 
 }
