--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -6,7 +6,7 @@
         </title>
 
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        
+
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" 
             integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" 
             crossorigin="anonymous">
@@ -75,7 +75,7 @@
                         </li>
                     </ul>
                     {% endif %}
-                    <ul id="menu" class="pl-3 pr-3 mr-0 mt-2 float-right">
+                    <ul id="menu" class="float-right">
                         {% for k, v in menu.items() %}
                         {% if k != "" %}
                         <li class="p-2 text-white font-weight-bold text-uppercase">
