--- a/app/templates/about.html
+++ b/app/templates/about.html
@@ -33,8 +33,8 @@
                     </div>
                     <div class="row">
                         <div class="col section-board text-center">
-                            <ul id="board" class="px-5 px-5">
-                                <li class="pr-5">
+                            <ul id="board" class="p-0">
+                                <li class="p-0">
                                     <div id="1" class="board-member d-inline-block text-center p-5">
                                         Jane Doe
                                         <br>
@@ -53,7 +53,7 @@
                                         <img class="remove-user d-inline ml-3" src="/static/images/trash.png">
                                     </div> 
                                 </li>
-                                <li class="pr-5">
+                                <li class="p-0">
                                     <div id="2" class="board-member d-inline-block text-center p-5">
                                         Rebecca Good
                                         <br>
@@ -70,7 +70,7 @@
                                         </button>
                                     </div> 
                                 </li>
-                                <li class="pr-5">
+                                <li class="p-0">
                                     <div id="2" class="board-member d-inline-block text-center p-5">
                                         John Michael
                                         <br>
@@ -87,7 +87,7 @@
                                         </button>
                                     </div> 
                                 </li>
-                                <li class="pr-5">
+                                <li class="p-0">
                                     <div id="2" class="board-member d-inline-block text-center p-5">
                                         Shana Anthony
                                         <br>
