mobile responsive calendar today font size

--- a/app/templates/calendar.html
+++ b/app/templates/calendar.html
@@ -23,8 +23,8 @@
                                                         <button class="today-button" id="todayButton1">
                                                             Today
                                                         </button>
-                                                        <img id="navBack1" role="button" tabindex="0" title="Previous period" src="/static/images/left_arrow.png" width="22" height="17" class="navbutton navBack">
-                                                        <img id="navForward1" role="button" tabindex="0" title="Next period" src="/static/images/right_arrow.png" width="22" height="17" class="navbutton navForward">
+                                                        <img id="navBack1" role="button" tabindex="0" title="Previous period" src="/static/images/left_arrow.png" width="22" height="17" class="navbutton navBack m-1">
+                                                        <img id="navForward1" role="button" tabindex="0" title="Next period" src="/static/images/right_arrow.png" width="22" height="17" class="navbutton navForward m-1">
                                                     </td>
                                                     <td id="dateEditableBox1" class="date-picker-off">
                                                         <div class="date-top" id="currentDate1">
