--- a/app/static/css/style.css
+++ b/app/static/css/style.css
@@ -993,6 +993,12 @@ cursor: pointer;
         margin-top: 2rem;
         margin-right: 1.5rem;
     }
+
+    .date-top {
+
+        font-size: 11pt !important;
+    }
+}
     
 
 @media screen and (min-width: 576px) {
@@ -1032,6 +1038,11 @@ cursor: pointer;
     .down-arrow {
 
         margin-right: 7px;
+    }
+
+    .date-top {
+
+        font-size: 15pt !important;
     }      
 }
 
@@ -1072,6 +1083,11 @@ cursor: pointer;
     .down-arrow {
 
         margin-right: -5px;
+    }
+
+    .date-top {
+
+        font-size: 20pt !important;
     }         
 }
 
