changed margin on down-arrow, removed from media queries

--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -166,7 +166,7 @@
                             {% endif %}
                         </div>
                     </div>
-                    <div class="row justify-content-center base-2">
+                    <div class="row ml-0 justify-content-center base-2">
                         <div class="col social-media-div">
                             <a id="facebook_link" href="{{ facebook }}" onclick="return confirm('You are about to navigate away from the site to Facebook.com')">
                                 <img class="social-media" src="/static/images/facebook.png">
