remove member from about  me page,  needs prompt 'are you sure'

--- a/app/static/css/style.css
+++ b/app/static/css/style.css
@@ -672,6 +672,13 @@ cursor: pointer;
     font-family: Galvji;
 }
 
+.member-icon:hover {
+
+    cursor: pointer;
+    opacity: 0.8;
+}
+
+
 .btn-light {
 
     color: #535d67;
