--- a/app/templates/about.html
+++ b/app/templates/about.html
@@ -37,7 +37,7 @@
                                 {% for member in members %}
                                 {% if member.founder == True %}
                                 <li class="p-0">
-                                    <div id="1" class="board-member d-inline-block text-center p-5">
+                                    <div id="{{member.id}}" class="board-member d-inline-block text-center p-5">
                                         {{member.name}}
                                         <br>
                                         <span class="board-member-roll">
@@ -47,7 +47,7 @@
                                         <img class="board-member-img p-2" src="{{member.image}}">
                                         <br>
                                         {% if current_user.is_authenticated %}
-                                        <img class="upload-user-image d-inline mr-3" src="/static/images/upload.png">
+                                        <img class="upload-user-image member-icon d-inline mr-3" src="/static/images/upload.png" data-member="{{member.id}}">
                                         {% endif %}
                                         <button type="button" class="btn btn-light py-0 text-uppercase" data-toggle="modal" data-target="#exampleModal" data-name="{{member.name}}" data-title="{{member.title}}" data-about="{{member.about}}"> 
                                             <small> 
@@ -55,7 +55,7 @@
                                             </small>
                                         </button>
                                         {% if current_user.is_authenticated %}
-                                        <img class="remove-user d-inline ml-3" src="/static/images/trash.png">
+                                        <img class="remove-user member-icon d-inline ml-3" src="/static/images/trash.png" data-member="{{member.id}}">
                                         {% endif %}
                                     </div> 
                                 </li>
@@ -76,7 +76,7 @@
                                 {% for member in members %}
                                 {% if member.founder == False %}
                                 <li class="p-0">
-                                    <div id="1" class="board-member d-inline-block text-center p-5">
+                                    <div id="{{member.id}}" class="board-member d-inline-block text-center p-5">
                                         {{member.name}}
                                         <br>
                                         <span class="board-member-roll">
@@ -86,7 +86,7 @@
                                         <img class="board-member-img p-2" src="{{member.image}}">
                                         <br>
                                         {% if current_user.is_authenticated %}
-                                        <img class="upload-user-image d-inline mr-3" src="/static/images/upload.png">
+                                        <img class="upload-user-image member-icon d-inline mr-3" src="/static/images/upload.png"data-member="{{member.id}}">
                                         {% endif %}
                                         <button type="button" class="btn btn-light py-0 text-uppercase" data-toggle="modal" data-target="#exampleModal" data-name="{{member.name}}" data-title="{{member.title}}" data-about="{{member.about}}"> 
                                             <small> 
@@ -94,7 +94,7 @@
                                             </small>
                                         </button>
                                         {% if current_user.is_authenticated %}
-                                        <img class="remove-user d-inline ml-3" src="/static/images/trash.png">
+                                        <img class="remove-user member-icon d-inline ml-3" src="/static/images/trash.png"  data-member="{{member.id}}">
                                         {% endif %}
                                     </div> 
                                 </li>
